# WebRTC-example-rs

./: Cargo.toml  README.md  gen_crt.sh  index.js  main.rs
back/: main.rs
front/: index.html  webrtc.js
